# StockHunter

./: .env.example  .gitignore  README.md  dream-index-config.yaml  index.html  pyproject.toml
.claude/: settings.local.json
.claude/agents/: batch-processor.md  chart-generator.md  data-engineer.md  indicator-developer.md  report-builder.md  service-integrator.md
.claude/skills/stock-batch-report/: skill.md
.claude/skills/stock-batch-report/references/: report-spec.md
.claude/skills/stock-hunter/: skill.md
.github/workflows/: daily-report.yml  weekly-report.yml
2026-04-10/: report.html
2026-04-17/: report.html
2026-04-24/: report.html
_workspace/: 01_dream_team_indicators.md
scripts/: build_index.py  prune_cache.py  run_batch.sh  test_100.py
src/: config.py  main.py
src/api/: app.py  dependencies.py  routes.py  schemas.py
src/batch/: __main__.py  runner.py  types.py
src/data/: __init__.py  cache.py  krx.py
src/indicators/: __init__.py  chaikin.py  demark.py  dmi.py  macd.py  stochastic.py  types.py
src/report/: generator.py  templates.py  types.py
src/screener/: __init__.py  dream_config.py  engine.py  types.py
src/stock_hunter.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/types/: __init__.py  ohlcv.py  stock.py
src/visualization/: __init__.py  chart.py  styles.py
tests/: test_api.py  test_batch.py  test_cache.py  test_chaikin.py  test_chart.py  test_demark.py  test_dmi.py  test_dream_config.py  test_engine.py  test_krx.py  test_macd.py  test_report.py  test_stochastic.py  test_types.py
(+1 files in other folders)
