[project]
name = "stock-hunter"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "pykrx>=1.0.45",
    "finance-datareader>=0.9",
    "pandas>=2.0",
    "numpy>=1.24",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-asyncio", "httpx>=0.24"]
api = ["fastapi>=0.100", "uvicorn>=0.23", "pydantic>=2.0"]
